class page overflow fix trial 1

--- a/src/components/pages/Classes/Classes.scss
+++ b/src/components/pages/Classes/Classes.scss
@@ -334,7 +334,7 @@
         .heroPara {
             background-image: url('./class\ hero\ image-photoaidcom-greyscale.jpg');
             background-position: center;
-            margin-left: -8%;
+            // margin-left: -8%;
             width: 100%;
             padding: 30% 10%;
             color:white;
